<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.krishe.govern.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical"
        tools:context=".login.LoginActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:elevation="4dp"
            android:padding="4dp"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/screen_logo" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="25dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/sign_in_to_continue"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_email"
                        android:layout_width="match_parent"
                        android:background="@color/white"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_user_id"
                        android:inputType="number"
                        android:text=""
                        app:addTextChangedListener="@{viewModel.emailWatcher()}" />
                </com.google.android.material.textfield.TextInputLayout>
                <!--demo123-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginTop="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_password"
                        android:background="@color/white"
                        android:inputType="textPassword"
                        android:text=""
                        app:addTextChangedListener="@{viewModel.pwdWatcher()}" />
                </com.google.android.material.textfield.TextInputLayout>


                <CheckBox
                    android:id="@+id/keepMeSigned"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/keep_me_signed" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    style="@style/borderButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="15dp"
                    android:onClick="@{()->viewModel.loginBtn()}"
                    android:padding="8dp"
                    android:text="@string/login"
                    app:cornerRadius="25dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
</layout>
